--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,3 +1,20 @@
+body {
+    height: 1360px;
+    width: 100%;
+    margin: 0;
+    min-height: 350vh;
+    overflow: auto;
+    
+   }
+   
+   #results-1 {
+    overflow: scroll !important;
+    height: 100vh;
+   }
+
+
+
+
 .begin {
     border: 1px solid black;
     width: 30%;
@@ -5,8 +22,12 @@
 }
 
 #footer {
-    height: 10%;
+    height: 5%;
     padding: 0 35%;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
 }
 
 a {
@@ -14,5 +35,9 @@ a {
 }
 
 .hide {
+    display: none;
+}
+
+.modal-backdrop {
     display: none;
 }
